--- a/index.html
+++ b/index.html
@@ -17,6 +17,29 @@
 
 <body>
 
+    <div id="container"> <!--Container init-->
+
+        <header><!--Header init-->
+            <div id="logo">
+                <h1><a href="">Museu Nacional</a></h1>
+            </div>
+
+            <nav><!--Nav init-->
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Exposições</a></li>
+                    <li><a href="">Pesquisa</a></li>
+                    <li><a href="">Acervo</a></li>
+                    <li><a href="">Vídeos</a></li>
+                    <li><a href="">Fotos</a></li>
+                    <li><a href="">contato</a></li>
+                </ul>
+            </nav><!--Nav end-->
+
+        </header><!--Header end-->
+
+    </div> <!--Container end-->
+
 </body>
 
 </html>
